Update gitignore with updated repositories list

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+# Repositories
 bonita-connector-alfresco
 bonita-connector-cmis
 bonita-connector-database
@@ -11,13 +12,15 @@ bonita-connector-twitter
 bonita-connector-webservice
 bonita-connectors
 bonita-distrib
+bonita-engine
 bonita-portal-js
 bonita-studio-watchdog
 bonita-studio
-bonita-theme-builder
 bonita-ui-designer
 bonita-userfilters
 bonita-web-extensions
 bonita-web
-community
 image-overlay-plugin
+
+# IDE
+.idea/
