--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,7 +30,7 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v1
-    - name: Setup JDK 11
+    - name: Setup JDK
       uses: actions/setup-java@v1
       with:
         java-version: 11
