--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: MacOS and Windows Build
+name: Linux, MacOS and Windows Build
 
 on:
   push:
@@ -27,6 +27,7 @@ jobs:
         os:
           - {name: macos-10.15, short: "macos" }
           - {name: windows-2019, short: "windows" }
+          - {name: unbuntu-20.03, short: "ubuntu" }
     steps:
     - name: Checkout
       uses: actions/checkout@v1
