--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -65,6 +65,7 @@ jobs:
   slack:
     name: Notify Slack Failure
     needs: build
+    if: always()
     runs-on: ubuntu-latest    
     steps:
       - uses: technote-space/workflow-conclusion-action@v3
